Uniform and exponential done

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -447,12 +447,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that an individual spends more than 15 minutes in the bank is 0.9932620530009145.\n"
+     ]
+    }
+   ],
    "source": [
     "# your answer here\n",
-    "# Hint: This is same as saying P(x<15)"
+    "# Hint: This is same as saying P(x<15)\n",
+    "\n",
+    "bank = expon(10)\n",
+    "print(f'The probability that an individual spends less than 15 minutes in the bank is {bank.cdf(15)}.')#bank_time = np.random.exponential(size=100000, scale=10)\n",
+    "# .cdf(15)"
    ]
   },
   {
@@ -464,19 +476,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that an individual spends more than 15 minutes in the bank is 0.006737946999085476.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "print(f'The probability that an individual spends more than 15 minutes in the bank is {1 - bank.cdf(15)}.')#bank_time = np.random.exponential(size=100000, scale=10)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
