committing working changes

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.63828393 2.4522482  2.9287989  2.57129129 2.93473124 2.89799847\n",
-      " 2.20618566 2.10513691 2.80703072 2.74106187]\n"
+      "[2.4896156  2.26782551 2.69634109 2.69563107 2.11511868 2.14494679\n",
+      " 2.99070661 2.80921736 2.41045501 2.40697477]\n"
      ]
     }
    ],
@@ -52,6 +52,7 @@
     "from matplotlib import pyplot as plt\n",
     "import pylab as p\n",
     "import numpy as np\n",
+    "from scipy.stats import expon\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from scipy.stats import expon\n",
@@ -1028,12 +1029,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that a customer will spend less than fifteen minutes in the bank is 0.7768698398515702\n"
+     ]
+    }
+   ],
    "source": [
-    "# your answer here\n",
-    "# Hint: This is same as saying P(x<15)"
+    "lambda_bank = 1/10\n",
+    "\n",
+    "x = 15\n",
+    "\n",
+    "prob = expon.cdf(x, scale=10)\n",
+    "\n",
+    "print(\"The probability that a customer will spend less than fifteen minutes in the bank is\", prob)"
    ]
   },
   {
@@ -1045,11 +1059,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of customer spending more than 15 minutes in the bank is:  0.2231301601484298\n"
+     ]
+    }
+   ],
    "source": [
-    "# your answer here"
+    "\n",
+    "probability_more_than_15 = 1 - expon.cdf(x, scale=10)\n",
+    "print('The probability of customer spending more than 15 minutes in the bank is: ', probability_more_than_15)"
    ]
   },
   {
